--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
 <head>
-    <script src="js/timbre.dev.js"></script>
+	<title>Timbre.js experiments</title>
 </head>
 <body>
-    Hello world!
+Hello world!
+
+<script src="js/timbre.dev.js"></script>
+<script src="js/jquery-1.10.2.min.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
