Put a container around page content

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 	<title>Timbre.js experiments</title>
 </head>
 <body>
-Hello world!
-
+<div id="body_container">
+	Hello world!
+</div>
 <script src="js/timbre.dev.js"></script>
 <script src="js/jquery-1.10.2.min.js"></script>
 <script src="js/script.js"></script>
