--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	Hello world!
 </div>
 <script src="js/timbre.dev.js"></script>
+<script src="js/subcollider-min.js"></script>
 <script src="js/jquery-1.10.2.min.js"></script>
 <script src="js/script.js"></script>
 </body>
