--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
 <head>
 	<title>Timbre.js experiments</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <div id="body_container">
-	Hello world!
+	<h1>Hello world!</h1>
 </div>
 <script src="js/timbre.dev.js"></script>
 <script src="js/subcollider-min.js"></script>
