Made page prettier
Also added click event (for mobile)

--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <html>
 <head>
 	<title>Timbre.js experiments</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/animate.min.css">
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <div id="body_container">
-	<h1>Hello world!</h1>
+	<div align="center" class="Absolute-Center">
+		<h1>Hello world!</h1>
+	</div>
 </div>
 <script src="js/timbre.dev.js"></script>
 <script src="js/subcollider-min.js"></script>
 <script src="js/jquery-1.10.2.min.js"></script>
-<script src="js/script.js"></script>
+<script src="js/sound.js"></script>
 </body>
 </html>
