Attempting to focus processing sketch automatically

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <script>
 	$(document).ready(function(){
 		$(document).ready(function(){
+			$("canvas").focus();
 			$(document).keypress(playNote);
 			$(document).click(playNote);
 		});
