--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <script>
 	$(document).ready(function(){
 		$(document).ready(function(){
-			$("canvas").focus();
+			$("#canvas").focus();
 			$(document).keypress(playNote);
 			$(document).click(playNote);
 		});
