--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 		</div>
 
 		<!-- IMPORTS -->
+		<script src="lib/Box2dWeb-2.1.a.3.min.js"></script>
 		<script src="lib/timbre.dev.js"></script>
 		<script src="lib/subcollider-min.js"></script>
 		<script src="lib/processing-1.4.1.js"></script>
 		<script src="lib/yabble.js"></script>
-		<script src="lib/Box2dWeb-2.1.a.3.min.js"></script>
 		
 		<!-- RUN -->
 		<script>
-			require.setModuleRoot('./');
-			require.run('js/main');
+            require.setModuleRoot('./js/');
+            require.run('main');
 		</script>
 	</body>
 </html>
