Updated processing version, better mobile experience

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<script src="lib/Box2dWeb-2.1.a.3.min.js"></script>
 		<script src="lib/timbre.dev.js"></script>
 		<script src="lib/subcollider-min.js"></script>
-		<script src="lib/processing-1.4.1.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/processing.js/1.4.8/processing.min.js"></script>
 		<script src="lib/yabble.js"></script>
 		
 		<!-- RUN -->
